# transfera-client

./: README.md
.github/workflows/: client_deploy.yml
client/: README.md  next.config.js  package-lock.json  package.json
client/public/manual/: architecture.html  download-flow.html  features.html  frontend.html  http-server.html  index.html  main-lifecycle.html  operations.html  p2p-sharer.html  sockets-fds.html  syntax.html  threads.html  upload-flow.html
client/public/manual/assets/css/: manual.css
client/public/manual/assets/js/: manual.js  mermaid-init.js
client/src/app/: layout.tsx  page.tsx
client/src/components/: FileDownload.tsx  FileUpload.tsx  InviteCode.tsx
client/src/lib/: api.ts  downloadFilename.ts  site.ts  uploadLimits.ts  uploadValidation.ts
deploy/: api-url.env
deploy/linode/: Caddyfile.example  build-server.sh  build-ui.sh  diagnose.sh  install-services.sh  map-port-80.sh  peerlink-api.service  peerlink-client.service  peerlink.env.example  run-client.sh  transfera-api.service  transfera-client.service  transfera.env.example  verify-ui.sh
docs/: linode-deploy.md  render-deploy.md
server/: .dockerignore  CMakeLists.txt  Dockerfile
server/include/server/: logging.hpp
server/include/server/service/: fileController.hpp  fileSharer.hpp
server/scripts/: docker-run.sh  run.sh  test-p2p-download.sh  test-p2p-local.sh
server/src/: app.cpp  logging.cpp  main.cpp  main_runner.cpp
server/src/services/: fileController.cpp  fileSharer.cpp
server/src/utils/: uploadUtils.cpp
